--- a/web.config
+++ b/web.config
@@ -4,6 +4,8 @@
         <staticContent>
 		   <remove fileExtension=".json" />
 			<mimeMap fileExtension=".json" mimeType="application/json" />
+					   <remove fileExtension=".geojson" />
+			<mimeMap fileExtension=".geojson" mimeType="application/json" />
             <remove fileExtension=".woff" />
             <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
             <remove fileExtension=".ttf" />
