use czml file instead of a geojson format

--- a/web.config
+++ b/web.config
@@ -2,6 +2,9 @@
 <configuration>
     <system.webServer>
         <staticContent>
+			<remove fileExtension=".czml" />
+			<mimeMap fileExtension=".czml" mimeType="application/json" />
+					   <remove fileExtension=".geojson" />
 		   <remove fileExtension=".json" />
 			<mimeMap fileExtension=".json" mimeType="application/json" />
 					   <remove fileExtension=".geojson" />
